--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-autoprefixer": "^5.0.0",
     "gulp-clean-css": "^3.9.4",
     "gulp-cssbeautify": "^1.0.0",
+    "gulp-csscomb": "^3.0.8",
     "gulp-imagemin": "^4.1.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
@@ -32,6 +33,6 @@
   },
   "dependencies": {
     "normalize.css": "^8.0.0",
-    "npm": "^6.0.1"
+    "npm": "^6.1.0"
   }
 }
